--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,7 @@ spring:
   jackson:
     default-property-inclusion: non_null
 
-openai:
-  api-key: ${OPENAI_API_KEY:}
-  model: gpt-4o-mini
+  llm:
+    provider: openai
+    model: gpt-4o-mini
+    apiKey: ${OPENAI_API_KEY:}
