--- a/MCP-Server/package.json
+++ b/MCP-Server/package.json
@@ -5,8 +5,7 @@
   "main": "build/index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node build/index.js",
-    "dev": "ts-node src/index.ts"
+    "start": "node build/index.js"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.0.0",
