--- a/MCP-Server/Dockerfile
+++ b/MCP-Server/Dockerfile
@@ -1,21 +1,12 @@
-# Dockerfile for Node MCP server
-
 FROM node:20-alpine
 LABEL authors="arnotserunyan"
 WORKDIR /app
 
 COPY MCP-Server/package.json MCP-Server/package-lock.json* ./
-RUN npm install --only=production
+RUN npm install
 
 COPY . .
 
-# Expose MCP port
 EXPOSE 3333
-
-# Environment:
-# - BACKEND_BASE_URL: URL of the Spring Boot service (in cloud)
-# - PORT: MCP listening port (3333)
-ENV PORT=3333
-ENV BACKEND_BASE_URL=""
 
 CMD ["npm", "start"]
